src/App.css
.App {
  text-align: center;
  background-color: #212121;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 0.5vmin);
  color: rgb(255, 255, 255);
}

.recharts-tooltip-wrapper {
  margin: 0;
  line-height: 6px;
  border: 1px solid #f5f5f5;
  background-color: hsla(0, 0%, 100%, .8);
  padding: 5px;
  color: rgb(10, 9, 9);
}

.recharts-wrapper {
  background-color: #272727;
  margin: auto;
}

.carousel {
  width:900px;
  height:500px;
  margin: 10px auto;
}

.carousel-control-next-icon {
  bottom: 5px;
  left: 0px;
  position: absolute;
}

.carousel-control-prev-icon {
  bottom: 5px;
  right: 0px;
  position: absolute;
}

a.carousel-control-prev, a.carousel-control-next {
  height: 10%;
  position: absolute;
  top: 450px;
}

.bg-title {
  background-color: #272727;
}

.my-modal .modal-content {
  color: white;
  background-color: #272727;
}

.my-modal .modal-footer {
  border-top:  0;
}

.recharts-wrapper + .line-chart-dl-btn {
  position: relative;
  bottom: 38px;
  left: 380px;
	color: #a8a8a8;
	border-color: #a8a8a8;
  box-shadow: none;
}

.recharts-wrapper + .line-chart-dl-btn:hover {
	color: #272727;
	background-color: #a8a8a8;
	border-color: #a8a8a8;
}

